--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-	<title>Emil site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
 </head>
 <body>
-<div id="menu">
-	<img id="logo" src="dizayn/logo.png">
-	<a href="google.com">
-	<span id="qisayol">QISAYOLLAR</span>
-	</a>
-	<a href="google.com">
-	<span id="studio">YOUTUBE STUDİO</span>
-	</a>
-	<a href="google.com">
-	<span id="pul">PUL VƏZİYYƏTİ</span>
-	</a>
-</div>
-
-<div id="link">
-	<a href="https://discord.com/channels/@me" target="_blank">
-	<img class="link" src="dizayn/link.png">
-	</a>
-</div>
-
-
+    <h1>Welcome to My Website</h1>
+    <p>This is a sample website hosted on GitHub Pages.</p>
 </body>
 </html>
