--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="menu">
-	<img id="logo" src="dizayn/logo.png">
+	<img id="logo" src="logo.png">
 	<a href="google.com">
 	<span id="qisayol">QISAYOLLAR</span>
 	</a>
@@ -22,7 +22,7 @@
 
 <div id="link">
 	<a href="https://discord.com/channels/@me" target="_blank">
-	<img class="link" src="dizayn/link.png">
+	<img class="link" src="link.png">
 	</a>
 </div>
 
