--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 <div id="menu">
 	<img id="logo" src="logo.png">
-	<a href="google.com">
+	<a href="">
 	<span id="qisayol">QISAYOLLAR</span>
 	</a>
-	<a href="google.com">
+	<a href="">
 	<span id="studio">YOUTUBE STUDİO</span>
 	</a>
-	<a href="google.com">
+	<a href="">
 	<span id="pul">PUL VƏZİYYƏTİ</span>
 	</a>
 </div>
